--- a/mesanimesfavoris.html
+++ b/mesanimesfavoris.html
@@ -24,7 +24,7 @@
     </p>
     <hr>
     Petite question à toi qui me lis, connais-tu mon ami rick? <br>
-    clique sur sa chaussure pour le découvrir ^^
+    clique sur sa chaussure pour le découvrir ^^ <br>
     <a href="https://youtu.be/dQw4w9WgXcQ?si=wYm1zc9cbMDnF8II&t=18"><img src="./assets/rick.png" alt="la chaussure de rick"/></a>
   </body>
   <footer>
