--- a/aproposdemoi.html
+++ b/aproposdemoi.html
@@ -3,9 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A propos</title>
+    <title>My resume</title>
   </head>
   <body>
-    c'est vide pour l'instant, reviens plus tard.
+    <h1>John Doe</h1>
+    <img src="./assets/images/moi.png" />
+    <h2>Resumer</h2>
+    <p>Je commence le dévellopement web par les bases :D</p>
+    <hr />
+    <h2>Scolarité</h2>
+    <ul>
+      <li>bac STI à Lyon en 2011</li>
+    </ul>
+    <hr />
+    <h2>Experience professionnel</h2>
+    <ul>
+      <li><h3>Conducteur de train - SNCF</h3></li>
+      <p>Octobre 2019 - Septembre 2023</p>
+      <ul>
+        <li>garage et dégarage de train</li>
+        <li>découché 2 fois par semaine</li>
+      </ul>
+      <li><h3>Agent d'escale ferroviaire - SNCF</h3></li>
+      <p>mai 2016 - Septembre 2019</p>
+      <ul>
+        <li>Départ des trains</li>
+        <li>surveillance des trains en marche</li>
+      </ul>
+    </ul>
+    <hr>
   </body>
+  <footer>© John Doe. All rights reserved.</footer>
 </html>
